# ESP32-A2DP

./: CMakeLists.txt
src/: BluetoothA2DPOutput.cpp  BluetoothA2DPOutput.h  BluetoothA2DPSink.cpp  BluetoothA2DPSink.h  BluetoothA2DPSinkQueued.cpp  BluetoothA2DPSinkQueued.h
src/codec_config/: codec_config.c  codec_config.h
